<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.primo5.habits.DimensionMental"
    android:background="#FFB266">


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskView"
        android:layout_below="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mentalHeader"
        android:id="@+id/mentalHeader"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/mentalReading"
        android:layout_toEndOf="@+id/mentalReading"
        android:layout_marginLeft="70dp"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mentalWriting"
        android:id="@+id/mentalPlanning"
        android:layout_above="@+id/mentalWriting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp"
        android:onClick="writingDetail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mentalWork"
        android:id="@+id/mentalWork"
        android:layout_above="@+id/mentalReading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mentalWriting"
        android:id="@+id/mentalWriting"
        android:layout_above="@+id/mentalWork"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mentalReading"
        android:id="@+id/mentalReading"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="107dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/plussign"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:clickable="false"
        android:focusable="false"
        android:onClick="addTask"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mentalHeader"
        android:layout_alignEnd="@+id/mentalHeader" />



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/facebook"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:clickable="false"
        android:focusable="false"
        android:layout_toEndOf="@+id/mentalHeader"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/taskView"
        android:layout_alignEnd="@+id/taskView" />

</RelativeLayout>
