<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.primo5.habits.DimensionSpirituality"
    android:background="#00ffffff">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Spirituality"
            android:id="@+id/spiritualityHeader"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:textSize="35dp"
            android:textIsSelectable="false"
            android:typeface="serif"
            android:textStyle="normal|italic"
            android:background="#00ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/balanceSpirituality"
            android:layout_gravity="center_horizontal"
            android:background="#00ffffff"
            android:onClick="dimensionDetail"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/balanceSpiritualityPercentage"
            android:layout_gravity="center_horizontal"
            android:background="#00ffffff"
            android:onClick="dimensionDetail"
            android:clickable="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="64dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageButton2"
                android:src="@drawable/plussign"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:onClick="addTask"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/spiritualityHeader"
                android:layout_toEndOf="@+id/spiritualityHeader"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/spiritualityPray"
                android:id="@+id/mentalPlanning"
                android:layout_above="@+id/mentalWriting"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:onClick="writingDetail"
                android:typeface="serif"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="64dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageButton"
                android:src="@drawable/plussign"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:onClick="addTask"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/spiritualityHeader"
                android:layout_toEndOf="@+id/spiritualityHeader"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/spiritualityMeditation"
                android:id="@+id/spiritualityPray"
                android:layout_alignTop="@+id/spiritualityHeader"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="64dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageButton3"
                android:src="@drawable/plussign"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:onClick="addTask"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/spiritualityHeader"
                android:layout_toEndOf="@+id/spiritualityHeader"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/spiritualityMusic"
                android:id="@+id/textView2"
                android:layout_above="@+id/mentalWriting"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:onClick="writingDetail"
                android:typeface="serif"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="64dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageButton4"
                android:src="@drawable/plussign"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:onClick="addTask"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/spiritualityHeader"
                android:layout_toEndOf="@+id/spiritualityHeader"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/spiritualityLiterature"
                android:id="@+id/textView3"
                android:layout_above="@+id/mentalWriting"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:onClick="writingDetail"
                android:typeface="serif"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="64dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageButton5"
                android:src="@drawable/plussign"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:onClick="addTask"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/spiritualityHeader"
                android:layout_toEndOf="@+id/spiritualityHeader"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/spiritualityNature"
                android:id="@+id/textView4"
                android:layout_above="@+id/mentalWriting"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:onClick="writingDetail"
                android:typeface="serif"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_marginRight="220dp">


            <ImageButton
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton7"
                android:src="@drawable/facebookbig"
                android:adjustViewBounds="true"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:background="#00ffffff"
                android:focusableInTouchMode="false" />

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton6"
                android:src="@drawable/twitterbig"
                android:adjustViewBounds="true"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:clickable="false"
                android:focusable="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:background="#00ffffff" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
